# soLoader

./: README.md
src/: CMakeLists.txt  elf_loader.cpp  elf_reader.cpp  main.cpp  memory_manager.cpp  relocator.cpp  soinfo_manager.cpp  utils.cpp
src/include/: common.h  elf_loader.h  elf_reader.h  memory_manager.h  relocator.h  soinfo_manager.h  utils.h
